# terum-capture

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
src/terum_capture/: __main__.py  backfill.py  cli.py  commands.py  config.py  upload.py
tests/: test_backfill.py  test_cli_flags.py  test_config.py  test_configure_hook.py  test_event_payload.py  test_incremental.py  test_process_transcript.py  test_project_scope.py  test_repo_identity.py  test_status_command.py  test_upload.py
