[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terum-capture"
version = "0.1.0"
description = "Capture Claude Code sessions into Terum's knowledge pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Terum" }]
keywords = ["claude-code", "terum", "capture", "hook", "llm"]
dependencies = ["httpx>=0.27"]

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://terum.ai"
Repository = "https://github.com/ryanliu-terum/terum-capture"

[project.scripts]
terum-capture = "terum_capture.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/terum_capture"]
